refactor: cleaned up code smells flagged by SonarQube